# remora

./: .gitignore  .ocamlformat  README.md  dune-project  remora.opam  remora.opam.locked  stdlib.remora  test.remora
.github/workflows/: build-and-test.yml
.metals/: metals.mv.db
examples/: conv2d.remora
lib/: Ast.ml  BaseEnvironment.ml  BaseEnvironment.mli  CBuilder.ml  CBuilder.mli  Compiler.ml  Compiler.mli  CompilerPipeline.ml  CompilerPipeline.mli  CompilerState.ml  CompilerState.mli  Core.ml  DeviceInfo.ml  Environment.ml  Environment.mli  EsexpLexer.mll  EsexpParser.mly  Identifier.ml  Identifier.mli  Kind.ml  MResult.ml  MResult.mli  Maybe.ml  MonadWithError.ml  MonadWithError.mli  NeList.ml  NeList.mli  Parser.ml  Parser.mli  Pipeline.ml  Pipeline.mli  Sort.ml  Source.ml  Source.mli  State.ml  State.mli  StateT.ml  StateT.mli  Substitute.ml  Substitute.mli  (+9 more)
lib/IntermediateLanguages/: Acorn.ml  Ast.ml  C.ml  Corn.ml  DefunNucleus.ml  Esexp.ml  Esexp.mli  Explicit.ml  ExplicitNucleus.ml  Fused.ml  InlineNucleus.ml  McCorn.ml  MonoNucleus.ml  Nested.ml  NolamNucleus.ml  Nucleus.ml  Texp.ml  Texp.mli  Typed.ml
lib/Stages/: AAlloc.ml  AAlloc.mli  Alloc.ml  Alloc.mli  Capture.ml  Capture.mli  Codegen.ml  Codegen.mli  Defunctionalize.ml  Defunctionalize.mli  Delambda.ml  Delambda.mli  Denest.ml  Denest.mli  Explicitize.ml  Explicitize.mli  Fuse.ml  Fuse.mli  FuseAndSimplify.ml  FuseAndSimplify.mli  Inline.ml  Inline.mli  Kernelize.ml  Kernelize.mli  Monomorphize.ml  Monomorphize.mli  Nest.ml  Nest.mli  Parse.ml  Parse.mli  Parser.ml  Parser.mli  PrintC.ml  PrintC.mli  Show.ml  Show.mli  Simplify.ml  Simplify.mli  SimplifyNested.ml  SimplifyNested.mli  (+8 more)
test/: dune  test_explicitizer.ml  test_fuse.ml  test_inline.ml  test_inliner.ml  test_kernelize.ml  test_mresult.ml  test_parse.ml  test_parser.ml  test_programs.ml  test_simplify.ml  test_type_check.ml  test_type_checker.ml
tests/integration/: dune  test_integration.ml
tests/unit/: TestPipeline.ml  TestPipeline.mli  test_explicitizer.ml  test_fuse.ml  test_inline.ml  test_kernelize.ml  test_parse.ml  test_programs.ml  test_simplify.ml  test_type_check.ml
