(menhir
 (modules EsexpParser))

(ocamllex EsexpLexer)

(include_subdirs unqualified)

(library
 (name remora)
 (public_name remora)
 (modules :standard EsexpParser EsexpLexer)
 (libraries base re2)
 (preprocess
  (pps ppx_jane ppx_deriving.eq ppx_deriving.show ppx_deriving.ord)))

(env
 (dev
  (flags
   (:standard -w -30))))
